--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    body{
+        @apply px-10 py-2
+    }
+
+}
+
+@layer base {
+    .control{
+        @apply border-white border-2 bg-transparent px-4 py-2 rounded box-content text-white !important;
+    }
+
+    .arrowControl{
+        @apply hidden !important;
+    }
+}
