--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,18 +3,22 @@
 @tailwind utilities;
 
 @layer components {
-    body{
+    body {
         @apply px-10 py-2
     }
 
 }
 
 @layer base {
-    .control{
+    .control {
         @apply border-white border-2 bg-transparent px-4 py-2 rounded box-content text-white !important;
     }
 
-    .arrowControl{
+    .arrowControl {
         @apply hidden !important;
+    }
+
+    .btn {
+        @apply text-center flex items-center justify-center focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5;
     }
 }
