--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
     body {
-        @apply px-10 py-2 bg-gray-100
+        @apply px-5 py-2 bg-neutral-100
     }
 
 }
@@ -19,6 +19,6 @@
     }
 
     .btn {
-        @apply text-center flex items-center justify-center focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5;
+        @apply text-center flex items-center justify-center focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-md text-sm px-5 py-2.5;
     }
 }
